WIP: Load YangFeatureProviders
JIRA: MDSAL-765
Change-Id: Ib08915be7b5aba785a8a09ec28dd6e008b61db67
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>